fix alignment

--- a/src/components/Copyright/copyright.module.css
+++ b/src/components/Copyright/copyright.module.css
@@ -10,3 +10,8 @@
     padding: 15px 50px 15px 50px;
   }
 }
+
+.innerContainer {
+  max-width: 900px;
+  margin: auto;
+}
